tests/samples/negative/modules/unknown_module_expr_path.ax
module unknown_module_expr_path;

import samplelib.visibility as vis;

fn main() -> i32 {
    return samplelib.missing.answer;
}
